miniextendr-macros/tests/ui/unsafe_empty.stderr
error: `unsafe(...)` must specify an option: currently only `unsafe(main_thread)` is supported
 --> tests/ui/unsafe_empty.rs:5:15
  |
5 | #[miniextendr(unsafe())]
  |               ^^^^^^^^
